--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ box-sizing: border-box;
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
-	opacity: .3;
+	opacity: 0.1;
 }
 .fade-in-image {
   animation: fadeIn 5s;
